restyle bjj page

--- a/pages/bjj.html
+++ b/pages/bjj.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <title>MyTube | Brazilian Jiu Jitsu</title>
   </head>
   <body>
     <div id="page-container">
       <div id="content-wrap">
         <!-- all other page content -->
-        <nav style="background-color: gainsboro">
+        <nav>
           <a rel="noopener noreferrer" href="../index.html">Home</a>
           <!-- prettier-ignore -->
-          <a rel="noopener noreferrer" href="./bjj.html">Brazilian Jiu Jitsu</a>
+
           <a rel="noopener noreferrer" href="./cooking.html">Cooking</a>
           <a rel="noopener noreferrer" href="./podcasts.html">Podcasts</a>
           <a rel="noopener noreferrer" href="../form.html">New Video</a>
@@ -32,7 +33,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/peters-crucible.html">
-              <h3>Jiu Jitsu Black Belt Exam | Peter's Crucible | ROYDEAN</h3>
+              Jiu Jitsu Black Belt Exam | Peter's Crucible | ROYDEAN
             </a>
           </div>
           <div class="card">
@@ -48,10 +49,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/rays-crucible.html">
-              <h3>
-                BEAUTIFUL Black Belt Demo | Ray's Crucible | Every Black Belt is
-                Special
-              </h3>
+              BEAUTIFUL Black Belt Demo | Ray's Crucible | Every Black Belt is
+              Special
             </a>
           </div>
           <div class="card">
@@ -67,7 +66,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/bjj-belts.html">
-              <h3>What Do BJJ Belts Mean?</h3>
+              What Do BJJ Belts Mean?
             </a>
           </div>
           <div class="card">
@@ -83,7 +82,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/bjj-blue-belt.html">
-              <h3>What is a BJJ Blue Belt?</h3>
+              What is a BJJ Blue Belt?
             </a>
           </div>
           <div class="card">
@@ -102,7 +101,7 @@
               rel="noopener noreferrer"
               href="../videos/gracie-challenge-fights.html"
             >
-              <h3>Unseen Gracie Challenge Fights</h3>
+              Unseen Gracie Challenge Fights
             </a>
           </div>
           <div class="card">
@@ -118,72 +117,21 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/bjj-history.html">
-              <h3>The History Of Brazilian Jiu-Jitsu (Untold Story)</h3>
+              The History Of Brazilian Jiu-Jitsu (Untold Story)
             </a>
           </div>
         </section>
       </div>
-      <hr />
+
       <!-- footer -->
-      <footer>&copy; Patrick Dunn 2023</footer>
+      <footer>
+        <a
+          rel="noopener noreferrer"
+          target="_blank"
+          href="https://github.com/knightmac19"
+          >&copy; Patrick Dunn 2023</a
+        >
+      </footer>
     </div>
   </body>
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-    #page-container {
-      position: relative;
-      min-height: 100vh;
-    }
-    #content-wrap {
-      padding-bottom: 2.5rem;
-    }
-
-    nav {
-      padding: 15px;
-      margin-bottom: 3rem;
-    }
-    nav a {
-      font-size: 1.7rem;
-      padding: 10px;
-    }
-    h1 {
-      margin-left: 20px;
-      margin-bottom: 1rem;
-    }
-    .featured {
-      display: flex;
-      align-items: end;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
-    .card {
-      text-align: center;
-      width: 285px;
-      height: 285px;
-      background-color: gainsboro;
-      border: gray solid 1px;
-      padding: 10px 5px 0px 5px;
-    }
-    .card h3 {
-      margin-top: 1rem;
-    }
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 2.5rem;
-      box-sizing: border-box;
-      padding-top: 10px;
-
-      text-align: center;
-      background-color: gainsboro;
-      border: 1px solid gray;
-    }
-  </style>
 </html>
