--- a/pages/cooking.html
+++ b/pages/cooking.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <title>MyTube | Cooking</title>
   </head>
   <body>
     <div id="page-container">
       <div id="content-wrap">
         <!-- all other page content -->
-        <nav style="background-color: gainsboro">
+        <nav>
           <a rel="noopener noreferrer" href="../index.html">Home</a>
           <!-- prettier-ignore -->
           <a rel="noopener noreferrer" href="./bjj.html">Brazilian Jiu Jitsu</a>
-          <a rel="noopener noreferrer" href="./cooking.html">Cooking</a>
+
           <a rel="noopener noreferrer" href="./podcasts.html">Podcasts</a>
           <a rel="noopener noreferrer" href="../form.html">New Video</a>
         </nav>
@@ -32,7 +33,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/chilaquiles.html">
-              <h3>CHILAQUILES VERDES</h3>
+              CHILAQUILES VERDES
             </a>
           </div>
           <div class="card">
@@ -48,7 +49,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/smoothies.html">
-              <h3>Best Anti-Inflammatory Smoothies | 6 Tasty Recipes</h3>
+              Best Anti-Inflammatory Smoothies | 6 Tasty Recipes
             </a>
           </div>
           <div class="card">
@@ -64,10 +65,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/guacamole.html">
-              <h3>
-                How to make the freshest GUACAMOLE 3 different METHODS |
-                Guacamole fiesta
-              </h3>
+              How to make the freshest GUACAMOLE 3 different METHODS | Guacamole
+              fiesta
             </a>
           </div>
           <div class="card">
@@ -83,10 +82,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/atole.html">
-              <h3>
-                the EASIEST and MOST Delicious TRADITIONAL CHAMPURRADO |
-                Chocolate Atole
-              </h3>
+              the EASIEST and MOST Delicious TRADITIONAL CHAMPURRADO | Chocolate
+              Atole
             </a>
           </div>
           <div class="card">
@@ -102,7 +99,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/beef-empanadas.html">
-              <h3>HOW TO MAKE THE BEST FLAKY GROUND BEEF EMPANADAS</h3>
+              HOW TO MAKE THE BEST FLAKY GROUND BEEF EMPANADAS
             </a>
           </div>
           <div class="card">
@@ -118,75 +115,22 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/papas-rellenas.html">
-              <h3>
-                If you have Potatoes then you NEED to Make These PAPAS RELLENAS
-                | Stuffed Potatoes with Ground Beef
-              </h3>
+              If you have Potatoes then you NEED to Make These PAPAS RELLENAS |
+              Stuffed Potatoes with Ground Beef
             </a>
           </div>
         </section>
       </div>
-      <hr />
+
       <!-- footer -->
-      <footer>&copy; Patrick Dunn 2023</footer>
+      <footer>
+        <a
+          rel="noopener noreferrer"
+          target="_blank"
+          href="https://github.com/knightmac19"
+          >&copy; Patrick Dunn 2023</a
+        >
+      </footer>
     </div>
   </body>
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-    #page-container {
-      position: relative;
-      min-height: 100vh;
-    }
-    #content-wrap {
-      padding-bottom: 2.5rem;
-    }
-
-    nav {
-      padding: 15px;
-      margin-bottom: 3rem;
-    }
-    nav a {
-      font-size: 1.7rem;
-      padding: 10px;
-    }
-    h1 {
-      margin-left: 20px;
-      margin-bottom: 1rem;
-    }
-    .featured {
-      display: flex;
-      align-items: end;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
-    .card {
-      text-align: center;
-      width: 285px;
-      height: 285px;
-      background-color: gainsboro;
-      border: gray solid 1px;
-      padding: 10px 5px 0px 5px;
-    }
-    .card h3 {
-      margin-top: 1rem;
-    }
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 2.5rem;
-      box-sizing: border-box;
-      padding-top: 10px;
-
-      text-align: center;
-      background-color: gainsboro;
-      border: 1px solid gray;
-    }
-  </style>
 </html>
