restyling podcasts page

--- a/pages/podcasts.html
+++ b/pages/podcasts.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <title>MyTube | Podcasts</title>
   </head>
   <body>
     <div id="page-container">
       <div id="content-wrap">
         <!-- all other page content -->
-        <nav style="background-color: gainsboro">
+        <nav>
           <a rel="noopener noreferrer" href="../index.html">Home</a>
           <!-- prettier-ignore -->
           <a rel="noopener noreferrer" href="./bjj.html">Brazilian Jiu Jitsu</a>
           <a rel="noopener noreferrer" href="./cooking.html">Cooking</a>
-          <a rel="noopener noreferrer" href="./podcasts.html">Podcasts</a>
           <a rel="noopener noreferrer" href="../form.html">New Video</a>
         </nav>
         <h1>Podcasts</h1>
@@ -32,10 +32,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/dating-market.html">
-              <h3>
-                How To Succeed In The Modern Dating Market - Sadia Khan | Modern
-                Wisdom 634
-              </h3>
+              How To Succeed In The Modern Dating Market - Sadia Khan | Modern
+              Wisdom 634
             </a>
           </div>
           <div class="card">
@@ -54,10 +52,8 @@
               rel="noopener noreferrer"
               href="../videos/men-mental-health.html"
             >
-              <h3>
-                Why Men Are Struggling With Mental Health - Connor Beaton |
-                Modern Wisdom 692
-              </h3>
+              Why Men Are Struggling With Mental Health - Connor Beaton | Modern
+              Wisdom 692
             </a>
           </div>
           <div class="card">
@@ -73,10 +69,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/mental-models.html">
-              <h3>
-                The Most Important Mental Models in BJJ with Steve Kwan -
-                Strenuous Life Podcast Ep 391
-              </h3>
+              The Most Important Mental Models in BJJ with Steve Kwan -
+              Strenuous Life Podcast Ep 391
             </a>
           </div>
           <div class="card">
@@ -92,10 +86,8 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/greg-souders.html">
-              <h3>
-                On Learning Jiu-Jitsu with 100% Live Training and No Formal
-                Technical Instruction, with Greg Souders
-              </h3>
+              On Learning Jiu-Jitsu with 100% Live Training and No Formal
+              Technical Instruction, with Greg Souders
             </a>
           </div>
           <div class="card">
@@ -111,7 +103,7 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/conservative.html">
-              <h3>A Conservative on How His Party Has Changed Since 2016</h3>
+              A Conservative on How His Party Has Changed Since 2016
             </a>
           </div>
           <div class="card">
@@ -127,72 +119,21 @@
               ></iframe>
             </div>
             <a rel="noopener noreferrer" href="../videos/russia.html">
-              <h3>What&#39;s Really Going On in Russia?</h3>
+              What&#39;s Really Going On in Russia?
             </a>
           </div>
         </section>
       </div>
-      <hr />
+
       <!-- footer -->
-      <footer>&copy; Patrick Dunn 2023</footer>
+      <footer>
+        <a
+          rel="noopener noreferrer"
+          target="_blank"
+          href="https://github.com/knightmac19"
+          >&copy; Patrick Dunn 2023</a
+        >
+      </footer>
     </div>
   </body>
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-    #page-container {
-      position: relative;
-      min-height: 100vh;
-    }
-    #content-wrap {
-      padding-bottom: 2.5rem;
-    }
-
-    nav {
-      padding: 15px;
-      margin-bottom: 3rem;
-    }
-    nav a {
-      font-size: 1.7rem;
-      padding: 10px;
-    }
-    h1 {
-      margin-left: 20px;
-      margin-bottom: 1rem;
-    }
-    .featured {
-      display: flex;
-      align-items: end;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
-    .card {
-      text-align: center;
-      width: 285px;
-      height: 285px;
-      background-color: gainsboro;
-      border: gray solid 1px;
-      padding: 10px 5px 0px 5px;
-    }
-    .card h3 {
-      margin-top: 1rem;
-    }
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 2.5rem;
-      box-sizing: border-box;
-      padding-top: 10px;
-
-      text-align: center;
-      background-color: gainsboro;
-      border: 1px solid gray;
-    }
-  </style>
 </html>
