--- a/form.html
+++ b/form.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <title>MyTube | What&#39;s Really Going On in Russia?</title>
   </head>
   <body>
     <div id="page-container">
       <div id="content-wrap">
         <!-- all other page content -->
-        <nav style="background-color: gainsboro">
+        <nav>
           <a rel="noopener noreferrer" href="./index.html">Home</a>
           <!-- prettier-ignore -->
           <a rel="noopener noreferrer" href="./pages/bjj.html">Brazilian Jiu Jitsu</a>
@@ -64,21 +65,21 @@
           <br />
           <br />
           <br />
-          <input
+          <label for="public" class="public-private-radio"></label><input
             name="public-v-private"
             value="public"
             type="radio"
             id="public"
             checked
           />
-          <label for="public" class="public-private-radio">Public</label>
-          <input
+          Public</label>
+          <label for="private" class="public-private-radio"></label><input
             name="public-v-private"
             value="private"
             type="radio"
             id="private"
           />
-          <label for="private" class="public-private-radio">Private</label>
+          Private</label>
           <br />
           <br />
           <br />
@@ -89,12 +90,19 @@
         </form>
       </div>
       <!-- footer -->
-      <hr />
-      <footer>&copy; Patrick Dunn 2023</footer>
+
+      <footer>
+        <a
+          rel="noopener noreferrer"
+          target="_blank"
+          href="https://github.com/knightmac19"
+          >&copy; Patrick Dunn 2023</a
+        >
+      </footer>
     </div>
   </body>
 
-  <style>
+  <!-- <style>
     * {
       margin: 0;
       padding: 0;
@@ -163,34 +171,9 @@
       font-size: 1rem;
       font-weight: 100;
     }
-
-    .featured {
-      margin-left: 20px;
-    }
-    .card {
-      text-align: center;
-      width: 570px;
-      height: 400px;
-      background-color: gainsboro;
-      border: gray solid 1px;
-      padding: 10px 5px 0px 5px;
-    }
     .description {
       margin-top: 20px;
       max-width: 570px;
     }
-
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 2.5rem;
-      box-sizing: border-box;
-      padding-top: 10px;
-
-      text-align: center;
-      background-color: gainsboro;
-      border: 1px solid gray;
-    }
-  </style>
+  </style> -->
 </html>
