restyle papas rellenas vid page

--- a/videos/rays-crucible.html
+++ b/videos/rays-crucible.html
@@ -13,7 +13,7 @@
     <div id="page-container">
       <div id="content-wrap">
         <!-- all other page content -->
-        <nav style="background-color: gainsboro">
+        <nav>
           <a rel="noopener noreferrer" href="../index.html">Home</a>
           <!-- prettier-ignore -->
           <a rel="noopener noreferrer" href="../pages/bjj.html">Brazilian Jiu Jitsu</a>
